fixed css alignment

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,6 @@ body {
   -webkit-font-smoothing: antialiased;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 #root {
